Dernier commit de l'usine LVF

--- a/Conception/Html/usine.html
+++ b/Conception/Html/usine.html
@@ -22,19 +22,22 @@
             <div style="width: 100%; height: 100%; position: relative">
                 <div style="width: 173px; height: 2.73px; left: 0px; top: 0.20px; position: absolute; text-align: center"><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">À</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word"> propos</span></div>
                 <div style="width: 240px; height: 2.73px; left: 433px; top: 0.20px; position: absolute; text-align: center"><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">L</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">e Vélomobile</span></div>
-                <div style="width: 124px; height: 2.73px; left: 241px; top: 0.20px; position: absolute; text-align: center"><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">L</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration; underline; word-wrap: break-word">’usine</span></div>
+                <div style="width: 124px; height: 2.73px; left: 241px; top: 0.20px; position: absolute; text-align: center"><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">L</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; text-decoration: underline; word-wrap: break-word">’usine</span></div>
                 <div style="width: 254px; height: 43px; left: 756px; top: 0px; position: absolute; background: #1200E1; box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25); border-radius: 50px"></div>
             </div>
         </nav>
     </header>
     <main>
         <div style="width: 100%; height: 100%; text-align: center"><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">N</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">otre </span><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">s</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">ite</span><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word"> d</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">e</span><span style="color: #E1000F; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word"> p</span><span style="color: #000091; font-size: 30px; font-family: Jost; font-weight: 600; word-wrap: break-word">roduction</span></div>
-       <hr class="hr-tricolore">
+        <div id="map2">
+            
+        </div>
+        <hr class="hr-tricolore">
         <img src="../Assets/Images/Usine.png" alt="Image de l'usine" class="center-image">
         <div class="container">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <img src="../Assets/Images/Ancien VM.png" alt="Image de début VB">
+        <img src="../Assets/Images/Ancien VM.png" alt="Image de début VB" class="center-image">
         <div class="container">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
@@ -69,7 +72,7 @@
                 <option value="Client">Client</option>
                 <option value="Investisseur">Investisseur</option>
             </select>
-            <button type="submit"><span class="firstletter">Envoyer</span></button>
+            <button type="submit"><span class="firstletter"><div style="width: 100%; height: 100%; text-align: center"><span style="color: #E1000F; font-size: 20px; font-family: Jost; font-weight: 600; word-wrap: break-word">E</span><span style="color: white; font-size: 20px; font-family: Jost; font-weight: 600; word-wrap: break-word">nvoyer</span></div></span></button>
         </form>
         <div class="line">
             <span class="line-blue"></span>
